# triceratops-2

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
tests/: conftest.py
tests/fixtures/: __init__.py  stubs.py  synthetic.py
tests/fixtures/golden/: NUMERICAL_CHANGES.md  toi4051.json  toi4155.json
tests/fixtures/trilegal/: stub_trilegal.csv
tests/golden/: conftest.py  test_parity_toi4051.py  test_parity_toi4155.py
tests/unit/: test_config.py  test_molusc.py  test_plotting_fits.py
tests/unit/assembly/: test_orchestrator.py  test_pipelines.py  test_protocols.py
tests/unit/assembly/pipelines/: test_lightcurve.py
tests/unit/catalog/: test_mast_provider.py
tests/unit/domain/: test_entities.py  test_result.py  test_value_objects.py
tests/unit/lightcurve/: test_convert.py  test_fold.py  test_sources.py  test_types.py
tests/unit/priors/: test_lnpriors.py  test_sampling.py
tests/unit/scenarios/: test_btp_beb.py  test_companion_best_samples.py  test_companion_helpers.py  test_eb_branching.py  test_kernels.py  test_ntp_neb.py  test_ptp_peb.py
tests/unit/validation/: test_artifacts.py  test_cwd_independence.py  test_engine.py  test_job.py  test_mission_scope.py  test_preparer.py  test_probs.py  test_runner.py  test_store.py  test_workspace.py  test_workspace_lazy.py  test_workspace_prepare.py
triceratops/: __init__.py  cli.py  triceratops.py
triceratops/_compat/: target_shim.py
triceratops/assembly/: orchestrator.py
triceratops/assembly/pipelines/: lightcurve.py  trilegal.py
triceratops/catalog/: flux_contributions.py  mast_provider.py  protocols.py
triceratops/config/: config.py
triceratops/domain/: entities.py  molusc.py  result.py  value_objects.py
triceratops/io/: contrast_curves.py  molusc.py
triceratops/lightcurve/: config.py  convert.py  ephemeris.py  errors.py  fold.py  orchestration.py
triceratops/lightcurve/exofop/: __init__.py  client.py  toi_table.py
triceratops/lightcurve/sources/: __init__.py  array.py  file.py  lightkurve.py
triceratops/likelihoods/: transit_model.py
triceratops/plotting/: field.py  fits.py
triceratops/population/: __init__.py  protocols.py  trilegal_parser.py  trilegal_provider.py
triceratops/priors/: __init__.py  lnpriors.py  sampling.py
triceratops/scenarios/: _background_helpers.py  _companion_helpers.py  background_scenarios.py  base.py  companion_scenarios.py  kernels.py  nearby_scenarios.py  target_scenarios.py
triceratops/validation/: __init__.py  artifacts.py  engine.py  job.py  preparer.py  probs.py  runner.py  store.py  workspace.py
