[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triceratops-new"
version = "0.2.0.dev0"
description = "TRICERATOPS+ rewrite: astrophysical false-positive probability calculator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "astroquery>=0.4.6",
    "pytransit>=2.6",
    "mechanicalsoup>=1.3",
    "lightkurve>=2.4",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.scripts]
triceratops-fpp = "auto_fpp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triceratops*", "auto_fpp*"]

[tool.setuptools.package-data]
"triceratops.data" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
