[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holaxis-triceratops"
version = "0.3.0.dev0"
description = "TRICERATOPS+ rewrite: astrophysical false-positive probability calculator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "astroquery>=0.4.6",
    "pytransit>=2.6",
    "mechanicalsoup>=1.3",
    "lightkurve>=2.4",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
triceratops-fpp = "auto_fpp.cli:main"
triceratops-fpp-api = "auto_fpp.api.server:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "httpx>=0.28",
]
r2 = [
    "boto3>=1.34",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triceratops*", "auto_fpp*"]

[tool.setuptools.package-data]
"triceratops.data" = ["*.csv"]
"auto_fpp.api" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
