[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holaxis-triceratops"
version = "0.3.0.dev0"
description = "Bayesian false-positive probability calculator for candidate exoplanets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "astroquery>=0.4.6",
    "pytransit>=2.6",
    "mechanicalsoup>=1.3",
    "lightkurve>=2.4",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/holaxis/triceratops"
Repository = "https://github.com/holaxis/triceratops"
Documentation = "https://holaxis.github.io/triceratops"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triceratops*"]

[tool.setuptools.package-data]
"triceratops.data" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
